# epita-cmkv-project

./: .gitignore  AUTHORS  Makefile  README.md  analyze.ipynb  board.cc  board.hh  grill-2x2.sh  grill-4x4.sh  grill-5x5.sh  main.cc  piece.cc  piece.hh  profile1_old.txt  profile4-after-local-loss.txt  profile_opti_rand_movable.txt  pyproject.toml  testsuite.sh
data/benchmark/: benchmark-2x2.json  benchmark-2x2.md  benchmark-3x3.json  benchmark-3x3.md  benchmark-4x4.json  benchmark-4x4.md  benchmark-5x5.json  benchmark-5x5.md  benchmark-6x6.json  benchmark-6x6.md  benchmark.csv
data/input/: s2-02.txt
data/ref/: s2-03-ref.txt  s3-04-ref.txt  s4-04-ref.txt  s5-05-ref.txt  s6-03-ref.txt  s6-07-ref.txt  s6-08-ref.txt  s6-09-ref.txt
grill-args/: grill-3x3.args.txt  grill-6x6.args.txt
profile/: profile3-before-local-loss.txt
test/: checkref.sh
