[tool.poetry]
name = "projet"
version = "0.1.0"
description = ""
authors = ["Corentin Duchêne <corentin.duchene@epita.fr>"]

[tool.poetry.dependencies]
python = "3.10.2"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
pandas = "^1.5.3"
plotly = "^5.13.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
